--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	compile('org.flywaydb:flyway-core')
 	compile("org.springframework.boot:spring-boot-starter-security")
 	compile "com.github.dozermapper:dozer-core:6.1.0"
-//	compile("io.jsonwebtoken:jjwt:0.7.0")
+	compile("io.jsonwebtoken:jjwt:0.7.0")
 	//配置mybatis 数据源
 	compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0")
 	testCompile('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.0')
