--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.flyway.baseline-on-migrate=true
-mybatis.config-locations=classpath:mybatis-config.xml
-mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:com/johnxb/questionnaire/dao/*.xml
 mybatis.type-aliases-package=com.johnxb.questionnaire.entity
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = ${MYSQL_PASS}
