--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = ${MYSQL_PASS}
+spring.security.basic.enabled = false
