--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.url = jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?useUnicode
 spring.datasource.username = root
 spring.datasource.password = ${MYSQL_PASS}
 spring.security.basic.enabled = false
+
+#com.johnxb.questionnaire.api 日志 WARN级别输出
+logging.level.com.johnxb.questionnaire.api=WARN
+#com.johnxb.questionnaire.dao sql日志 DEBUG级别输出
+logging.level.com.johnxb.questionnaire.dao=DEBUG
+logging.file=logs/spring-boot-logging.log
