添加git忽略 日志文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,6 @@
 jwt:
   header: Authorization
-  secret: mySecret
+  secret: w-oasis123456
   expiration: 604800
   tokenHead: "Bearer "
-  route:
-    authentication:
-      path: auth
-      refresh: refresh
-      register: "auth/register"
+  exceptUrl: "/**"
